Updated textures and made extender 'piston-like' Bugs: conductor have display textures extenders change texture depending on how they are powered displays should be piston-like

--- a/src/main/resources/lang/better_than_redstone/en_US.lang
+++ b/src/main/resources/lang/better_than_redstone/en_US.lang
@@ -1,2 +1,6 @@
-tile.better_than_redstone.redstone_conductor.name = Redstone Conductor
-tile.better_than_redstone.redstone_conductor.desc =  Conducts Redstone
+tile.better_than_redstone.signal_conductor.name = Redstone Conductor
+tile.better_than_redstone.signal_conductor.desc = Conducts Redstone
+tile.better_than_redstone.signal_extender.name = Redstone Extender
+tile.better_than_redstone.signal_extender.desc = Extends Redstone
+tile.better_than_redstone.signal_display.name = Redstone Display
+tile.better_than_redstone.signal_display.desc = Displays Signal Strength
